<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bt_playing_music"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignTop="@id/bt_wave_settings"
        android:layout_toEndOf="@id/bt_wave_settings"
        android:text="@string/playing_music_bt" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_playing_music"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/deathconsciousness" />

    <ImageButton
        android:id="@+id/bt_account"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/acc_bt_desript"
        android:background="@drawable/user"/>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textEdit_find"
        android:layout_alignParentStart="true"
        android:layout_marginStart="176dp"
        android:layout_marginTop="103dp"
        android:text="TextView" />

    <EditText
        android:id="@+id/textEdit_find"
        android:layout_width="150dp"
        android:background="@drawable/find_background"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/search_bar_hint"
        android:textAlignment="center"
        android:inputType="text"
        android:autofillHints="name"/>

    <Button
        android:id="@+id/bt_play"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignTop="@id/textEdit_find"
        android:layout_marginTop="250dp"
        android:layout_marginStart="125dp"
        android:text="@string/play_bt" />

    <ImageButton
        android:id="@+id/bt_wave_settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/bt_play"
        android:layout_marginTop="75dp"
        android:background="@drawable/gear"
        android:contentDescription="@string/wave_settings_bt_descript"/>


</RelativeLayout>